Make sure the docson pre code wraps long sentences.

--- a/docs/source/_static/docson/css/docson.css
+++ b/docs/source/_static/docson/css/docson.css
@@ -15,7 +15,7 @@
  */
 
 .docson {
-    font-family: 'Droid Sans',verdana,helvetica;
+    font-family: 'Droid Sans', verdana, helvetica, serif;
     font-size: 13px;
     padding: 6px 6px 6px 6px;
 }
@@ -437,6 +437,11 @@
 
 .docson .json, .json-schema {
     font-family: "Lucida Console", Monaco, monospace;
+    overflow-x: auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
 .docson .json-punctuation {
